--- a/web/frontend/Cargo.toml
+++ b/web/frontend/Cargo.toml
@@ -16,7 +16,7 @@ console_error_panic_hook = "0.1.7"
 console_log = "1.0.0"
 fixed = "1.29.0"
 js-sys = "0.3.77"
-rytmos-synth = { git = "https://github.com/PietPtr/Rytmos.git" }
+rytmos-synth.workspace = true
 log = "0.4.27"
 wasm-bindgen = "0.2.100"
 
@@ -39,7 +39,9 @@ features = [
     "AudioWorkletNode",
     "AudioWorkletNodeOptions",
     'GainNode',
+    "Gamepad",
     "MessagePort",
+    "Navigator",
     'OscillatorNode',
     'OscillatorType',
     'Request',
