--- a/web/wasm-audio/Cargo.toml
+++ b/web/wasm-audio/Cargo.toml
@@ -13,8 +13,8 @@ fixed = "1.29.0"
 js-sys = "0.3.77"
 log = "0.4.27"
 trumpet-synth = { path = "../../trumpet-synth", features = ["std"] }
-rytmos-engrave = { git = "https://github.com/PietPtr/Rytmos.git" }
-rytmos-synth = { git = "https://github.com/PietPtr/Rytmos.git" }
+rytmos-engrave.workspace = true
+rytmos-synth.workspace = true
 wasm-bindgen = "0.2.100"
 wasm-bindgen-futures = "0.4.50"
 
