--- a/rp2040/Cargo.toml
+++ b/rp2040/Cargo.toml
@@ -24,11 +24,9 @@ rp2040-hal = { version = "0.11.0", default-features = false, features = [
 ] }
 heapless = "0.7.16"
 rp2040-boot2 = "0.2.1"
-embedded-graphics = "0.8.1"
 # TODO: move these to a library repo and have repo per "product"
 rytmos-synth.workspace = true
-common = { git = "https://github.com/PietPtr/Rytmos.git", features = [
-    "rp-pico",
-] }
+common.workspace = true
 # sh1106 = "0.5.0"
-trumpet-synth = { path = "../trumpet-synth" }
+trumpet-synth = { path = "../trumpet-synth", features = ["defmt"] }
+rp2040-i2s = "0.1.0"
