--- a/rp2040/Cargo.toml
+++ b/rp2040/Cargo.toml
@@ -3,7 +3,6 @@ name = "trumpet-synth-rp2040"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 fixed = "1.27.0"
@@ -11,7 +10,7 @@ cortex-m = "0.7"
 cortex-m-rt = "0.7"
 embedded-hal = { version = "0.2.7", features = ["unproven"] }
 log = "0.4.22"
-defmt = "0.3.5"
+defmt = { version = "0.3.5", optional = true }
 defmt-rtt = "0.4"
 panic-probe = { version = "0.3", features = ["print-defmt"] }
 fugit = "0.3.7"
@@ -30,3 +29,6 @@ common.workspace = true
 # sh1106 = "0.5.0"
 trumpet-synth = { path = "../trumpet-synth", features = ["defmt"] }
 rp2040-i2s = "0.1.0"
+
+[features]
+defmt = ["dep:defmt"]
