Add test case to emit to wav

--- a/trumpet-synth/Cargo.toml
+++ b/trumpet-synth/Cargo.toml
@@ -9,9 +9,7 @@ log = "0.4.22"
 heapless = "0.7.16"
 rytmos-engrave.workspace = true
 rytmos-synth.workspace = true
-common = { git = "https://github.com/PietPtr/Rytmos.git", features = [
-    "rp-pico",
-] }
+common.workspace = true
 enum-iterator = "2.1.0"
 # TODO: not no_std
 tracing = { version = "0.1.41", optional = true }
